clusters/platform/compiled/admissionregistration.k8s.io-v1.ValidatingWebhookConfiguration-externalsecret-validate.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/managed-by: Helmraiser
    external-secrets.io/component: webhook
  name: externalsecret-validate
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: external-secrets-webhook
      namespace: security
      path: /validate-external-secrets-io-v1beta1-externalsecret
  failurePolicy: Fail
  name: validate.externalsecret.external-secrets.io
  rules:
  - apiGroups:
    - external-secrets.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - externalsecrets
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 5
